--- a/Kubernetes/helm/fastapi-chart/templates/postgres.yaml
+++ b/Kubernetes/helm/fastapi-chart/templates/postgres.yaml
@@ -1,78 +1,83 @@
+{{- if .Values.deployPostgres }}
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: postgres-pv
-  namespace: app
+  name: postgres-pv-{{ .Values.namespace }}
+  namespace: {{ .Values.namespace }} # Ensure your namespace is properly set
 spec:
   capacity:
-    storage: 10Gi
+    storage: {{ .Values.resources.requests.storage }}
   accessModes:
     - ReadWriteOnce
-  hostPath: 
-    path: /data/postgres  # Adjust this path based on your host system
-
+  hostPath:
+    path: /mnt/data
+  storageClassName: manual
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-pvc
-  namespace: app
+  name: postgres-pvc-{{ .Values.namespace }}
+  namespace: {{ .Values.namespace }}
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
-
+      storage: {{ .Values.resources.requests.storage }}
+  storageClassName: manual
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres
-  namespace: app
+  name: postgres-{{ .Values.namespace }}
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: postgres
+      app: postgres-{{ .Values.namespace }}
   template:
     metadata:
       labels:
-        app: postgres
+        app: postgres-{{ .Values.namespace }}
     spec:
       containers:
-        - name: postgres
+        - name: postgres-{{ .Values.namespace }}
           image: postgres:14
           imagePullPolicy: Always
           ports:
             - containerPort: 5432
           env:
+            - name: POSTGRES_SERVER
+              value: "{{ .Values.env.POSTGRES_SERVER }}"
+            - name: POSTGRES_PORT
+              value: "{{ .Values.env.POSTGRES_PORT }}"
             - name: POSTGRES_DB
-              value: "app"
+              value: "{{ .Values.env.POSTGRES_DB }}"
             - name: POSTGRES_USER
-              value: "app"
+              value: "{{ .Values.env.POSTGRES_USER }}"
             - name: POSTGRES_PASSWORD
-              value: "changethis123"
-            - name: PGDATA
-              value: "/var/lib/postgresql/data/pgdata"  # Directory for PostgreSQL data storage
+              value: "{{ .Values.env.POSTGRES_PASSWORD }}"
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
-              name: postgres-storage
+              name: postgres-storage-{{ .Values.namespace }}
       volumes:
-        - name: postgres-storage
+        - name: postgres-storage-{{ .Values.namespace }}
           persistentVolumeClaim:
-            claimName: postgres-pvc
-
+            claimName: postgres-pvc-{{ .Values.namespace }}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres
-  namespace: app
+  name: postgres-{{ .Values.namespace }}
+  namespace: {{ .Values.namespace }}
 spec:
   ports:
     - port: 5432
-      targetPort: 5432  # Forward traffic to the correct port on the container
+      targetPort: 5432
   selector:
-    app: postgres
+    app: postgres-{{ .Values.namespace }}
   type: ClusterIP
+{{- end }}
+
+
